feat: GitHub oAuth env variables added

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
 ENVIRONMENT="development"
 PORT="9000"
-DOMAIN="http://localhost:3000"
-COOKIE_SECURE="false"
-DATABASE_URL="postgresql://postgres:pwd1234@localhsot:5432/pulsedb"
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/postgres"
+JWT_SECRET=""
+
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"                            # Or "465" for implicit TLS
+GMAIL_USERNAME=""      # Your full Gmail address
+GMAIL_APP_PASSWORD=""  # Use the 16-char App Password
+
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+GITHUB_REDIRECT_URL=""
 
 GOOSE_DRIVER="postgres"
 GOOSE_DBSTRING="${DATABASE_URL}"
