config: Valkey and Redist-Insight containers in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: "3.7"
-
 services:
+  # Primary database
   postgres:
     image: postgres:latest
     container_name: pulse-postgres
@@ -11,7 +10,40 @@ services:
       - "5432:5432"
     restart: on-failure
     volumes:
-      - pulse_db_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+
+  # Streaming, Leaderboard and Caching layer
+  valkey:
+    image: valkey/valkey:8.1.1-alpine
+    container_name: pulse-valkey
+    restart: on-failure
+    ports:
+      - "6379:6379"
+    command: valkey-server --appendonly yes # persistance
+    volumes:
+      - valkey_data:/data
+    networks:
+      - valkey_network
+
+  # UI for Valkey (cache)
+  insight:
+    image: redislabs/redisinsight:latest
+    container_name: pulse-insight
+    restart: on-failure
+    ports:
+      - "5540:5540"
+    depends_on:
+      - valkey
+    environment:
+      - VALKEY_HOST=valkey
+      - VALKEY_PORT=6379
+    networks:
+      - valkey_network
+
+networks:
+  valkey_network:
+    driver: bridge
 
 volumes:
-  pulse_db_data:
+  postgres_data:
+  valkey_data:
