--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ GITHUB_REDIRECT_URL=""
 GOOSE_DRIVER="postgres"
 GOOSE_DBSTRING="${DATABASE_URL}"
 GOOSE_MIGRATION_DIR="./db/migrations"
+
+FRONTEND_URL="http://localhost:3000"
