--- a/config.toml.sample
+++ b/config.toml.sample
@@ -1,18 +1,19 @@
-# Server Configuration
 environment = "development" # Options: development, testing, production
 port = 9000
 frontend_url = "http://localhost:3000"
 database_url = "postgres://user:password@localhost:5432/dbname"
 jwt_secret = "your-jwt-secret-key"
 
-# SMTP Configuration
+[valkey]
+port = 6379
+host = "localhost"
+
 [smtp]
 host = "smtp.gmail.com"
 port = 587
 username = "your.email@gmail.com"
 app_password = "your-gmail-app-password"
 
-# GitHub OAuth Configuration
 [github]
 client_id = "your-github-client-id"
 client_secret = "your-github-client-secret"
