--- a/config.toml.sample
+++ b/config.toml.sample
@@ -7,6 +7,8 @@ jwt_secret = "your-jwt-secret-key"
 [valkey]
 port = 6379
 host = "localhost"
+username = ""
+password = ""
 
 [smtp]
 host = "smtp.gmail.com"
