--- a/config.toml.sample
+++ b/config.toml.sample
@@ -20,3 +20,4 @@ app_password = "your-gmail-app-password"
 client_id = "your-github-client-id"
 client_secret = "your-github-client-secret"
 redirect_url = "http://localhost:9000/api/v1/auth/github/callback" 
+personal_access_token = "github-personal-access-token"
