--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services:
   # Primary database
   postgres:
-    image: postgres:latest
+    image: postgres:17-alpine
     container_name: pulse-postgres
     environment:
       POSTGRES_USER: postgres
@@ -10,7 +10,18 @@ services:
       - "5432:5432"
     restart: on-failure
     volumes:
-      - postgres_data:/var/lib/postgresql/18/data
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+      
 
   # Streaming, Leaderboard and Caching layer
   valkey:
