feat: Add drizzle-gateway

--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,8 @@ services:
     ports:
       - "5432:5432"
     restart: on-failure
+    networks:
+      - app_network
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -22,6 +24,21 @@ services:
           memory: 512M
           cpus: '0.5'
       
+  drizzle-gate:
+    image: ghcr.io/drizzle-team/gateway:latest
+    container_name: pulse-drizzle-gateway
+    environment:
+      DATABASE_URL: postgresql://postgres:1234@postgres:5432/postgres
+      STORE_PATH: /app
+    restart: on-failure
+    depends_on:
+      - postgres
+    ports:
+      - "4983:4983"
+    volumes:
+      - drizzle_gateway_data:/app
+    networks:
+      - app_network
 
   # Streaming, Leaderboard and Caching layer
   valkey:
@@ -52,9 +69,12 @@ services:
       - valkey_network
 
 networks:
+  app_network:
+    driver: bridge
   valkey_network:
     driver: bridge
 
 volumes:
   postgres_data:
   valkey_data:
+  drizzle_gateway_data:
